# JeayBit

./: .eslintrc.json  .gitattributes  .gitignore  README.md  package-lock.json  package.json
crypto_django/: .env  Dockerfile.beat  Dockerfile.celery  Procfile  celerybeat-schedule.db  db.sqlite3  docker-compose.yml  docker.compose.yml  dump.rdb  manage.py  pyproject.toml  requirements.txt
crypto_django/app/: aa.py  admin.py  all_views.py  apps.py  backends.py  candle.py  candle_dates.py  candle_minutes.py  crpyto_api.py  ex.py  models.py  price_per_stack.py  tasks.py  test.py  ticker.py  urls.py  views.py
crypto_django/app/migrations/: 0001_initial.py  0002_customuser_date_joined_customuser_first_name_and_more.py  0002_customuser_groups_customuser_is_active_and_more.py  0002_tradeevent.py  0003_crypto_usercrypto.py  0003_remove_customuser_first_name_and_more.py  0004_customuser_first_name_customuser_last_name.py  0004_rename_cryptocurrency_usercrypto_crypto.py  0005_rename_is_interested_usercrypto_is_favorited.py  0006_customuser_balance.py  0007_usercrypto_owned_quantity.py  0008_tradehistory.py  0009_rename_market_tradehistory_crypto_market.py  0010_alter_tradehistory_trade_price.py  0011_tradehistory_trade_category.py  0012_alter_customuser_balance.py  0013_tradehistory_is_signed.py  0014_alter_tradehistory_id.py  (+7 more)
crypto_django/config/: settings.py
crypto_django/crypto_app/: aa.py  asgi.py  authmiddleware.py  celery.py  consumers.py  cosumers.py  routing.py  secrets.json  settings.py  wsgi.py
crypto_django/crypto_django/: asgi.py  settings.py  urls.py  wsgi.py
(+527 files in other folders)
